unpackaged/main/default/objects/Clone_Setting__mdt/Clone_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Clone Setting(Related Records)</label>
    <pluralLabel>Clone Settings</pluralLabel>
</CustomObject>