unpackaged/main/default/objects/Clone_Setting__mdt/fields/Clear_Fields__c.field-meta.xml
<CustomField>
    <fullName>Clear_Fields__c</fullName>
    <label>Clear Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>