unpackaged/main/default/objects/Clone_Setting__mdt/fields/Exclude_from_comparison_Companions__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_comparison_Companions__c</fullName>
    <label>Exclude from comparison(Companions)</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>