unpackaged/main/default/objects/Clone_Setting__mdt/fields/Parent_Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object_Api_Name__c</fullName>
    <label>Parent Object Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>